# OpenClaw-SPIRE-NHP

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  LICENSES  PLAN.md  PURPOSE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
nhp_daemon/: __init__.py  attestation.py  ca.py  config.py  gateway_telemetry.py  main.py  registration.py  spire_agent.py  spire_server.py  sqlite_logger.py  tpm_simulator.py  tropic01_hw.py  trust_bundle.py  web_ui.py  workload_api.py
nhp_daemon/static/: index.html  style.css
tests/: conftest.py  test_attestation.py  test_ca.py  test_integration.py  test_registration.py  test_spire_server.py  test_sqlite_logger.py  test_tpm_simulator.py  test_trust_bundle.py
tropic01-req/libtropic_bridge/: CMakeLists.txt  tropic01_bridge.c  tropic01_bridge.h
